--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ducku.com.moneyhappy">
 
-
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:usesCleartextTraffic="true"
         android:allowBackup="true"
@@ -13,6 +13,9 @@
         android:theme="@style/AppTheme">
         <activity android:name=".ManHinhChiTien"></activity>
         <activity android:name=".ManHinhTaoVi" />
+        <activity android:name=".ManHinhDangKy" />
+        <activity android:name=".ManHinhDangNhap" />
+        <activity android:name=".api" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,8 +24,5 @@
             </intent-filter>
         </activity>
     </application>
-
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
 </manifest>
