--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".LoadWalletActivity"></activity>
+        <activity android:name=".ManHinhThuChi">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".LoadWalletActivity" />
         <activity android:name=".LoadCategoryActivity" />
         <activity android:name=".ManHinhChiTien" />
         <activity android:name=".ManHinhTaoVi" />
@@ -20,11 +27,7 @@
         <activity android:name=".ManHinhDangNhap" />
         <activity android:name=".api" />
         <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
