--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ManHinhThuChi">
+        <activity android:name=".ManHinhNhom">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+        <activity android:name=".ManHinhThuChi">
+
         </activity>
         <activity android:name=".LoadWalletActivity" />
         <activity android:name=".LoadCategoryActivity" />
@@ -26,9 +30,7 @@
         <activity android:name=".ManHinhDangKy" />
         <activity android:name=".ManHinhDangNhap" />
         <activity android:name=".api" />
-        <activity android:name=".MainActivity">
-
-        </activity>
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
