* [ThuChi] hợp nhất biến cho dễ xử lý sau này

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,13 +16,14 @@
 
         </activity>
         <activity android:name=".ManHinhNhom">
+        </activity>
+        <activity android:name=".ManHinhThuChi">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ManHinhThuChi"></activity>
         <activity android:name=".LoadWalletActivity" />
         <activity android:name=".LoadCategoryActivity" />
         <activity android:name=".ManHinhChiTien" />
