--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,17 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity android:name=".ManHinhLoadNhomCha1"></activity>
         <activity android:name=".HomeActivity">
+
+        </activity>
+        <activity android:name=".ManHinhSuaCategory" />
+        <activity android:name=".ManHinhHienThiGiaoDich">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".ManHinhSuaCategory" />
-        <activity android:name=".ManHinhHienThiGiaoDich">
         </activity>
         <activity android:name=".ManHinhLoadNhomCha" />
         <activity android:name=".ManHinhHienThiChiTietNhom" />
@@ -31,7 +33,9 @@
         <activity android:name=".ManHinhThuChi" />
         <activity android:name=".LoadWalletActivity" />
         <activity android:name=".LoadCategoryActivity" />
-        <activity android:name=".ManHinhGiaoDich" />
+        <activity android:name=".ManHinhGiaoDich" >
+
+        </activity>
         <activity android:name=".ManHinhTaoVi" />
         <activity android:name=".ManHinhDangKy" />
         <activity android:name=".ManHinhDangNhap" />
